<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wordiary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_day">Day</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_image">Image</string>
    <string name="button_takePhoto">&#xf030;</string>
	<string name="button_openGallery">&#xf03e;</string>
    <string name="button_newEntry">&#xf10e;</string>
	<string name="button_openPreferences">&#xf013;</string>
	<string name="button_changeMood">&#xf118;</string>
	<string name="button_editEntry">&#xf044;</string>
	<string name="button_shareEntry">&#xf045;</string>
	<string name="button_deleteEntry">&#xf00d;</string>
	<string name="button_prevEntry">&#xf053;</string>
	<string name="button_nextEntry">&#xf054;</string>
	<string name="button_prevImage">&#xf053;</string>
	<string name="button_nextImage">&#xf054;</string>
	<string name="button_shareImage">&#xf045;</string>
	<string name="button_deleteImage">&#xf00d;</string>
    <string name="button_newEntry_label">New entry</string>
    <string name="button_takePhoto_label">Take photo</string>
    <string name="title_activity_entry">Entry</string>
    <string name="dialog_new_entry">New Entry</string>
    <string name="dialog_edit_entry">Edit Entry</string>
    <string name="dialog_option_entry">Options</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="title_activity_mood">How are you?</string>
    <string name="font_size">Font size for entries</string>
    <string name="preferences">Preferences</string>
    <string name="grace_period">Set editing grace period</string>
    <string name="typeface">Font type for entries</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="grace_period_ended">Grace period for editing ended.</string>
    <string name="image_saved">Image saved</string>
    <string name="message_deleted">Message deleted</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="accepted_values">Only values between 0 and 168 allowed.</string>
    <string name="delete_button">Delete</string>
    <string name="share_button">Share</string>
    <string name="message_saved">Message saved</string>
    <string name="message_not_saved">Message not saved</string>
    <string name="share_via">Share via</string>
    <string name="camera_not_available">Camera not available</string>
    <string name="sd_full">The SD card is full</string>
    <string name="title_confirm">Proceed?</string>
    <string name="no_entry">No entry</string>
    <string name="no_photo">No photo</string>
    <string name="no_entry_or_photo_notice">You can use the following buttons to start enjoying Wordiary. They will appear through most of the application.</string>
    <string name="no_photo_notice">The gallery is still empty. Use the camera button to take a photo.</string>

</resources>