<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/MainButtonsLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="#231f74">

    <net.analogyc.wordiary.views.AwesomeButtonView
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:onClick="onHomeButtonClicked"
            android:text="Wd"
            android:textColor="#ffffff"
            android:background="@drawable/flatbutton"
            android:textSize="17dp"/>

    <net.analogyc.wordiary.views.AwesomeButtonView
            android:id="@+id/newEntryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:onClick="onNewEntryButtonClicked"
            android:text="@string/button_newEntry"
            android:textColor="#ffffff"
            android:background="@drawable/flatbutton"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20dp"/>

    <net.analogyc.wordiary.views.AwesomeButtonView
            android:id="@+id/takePhotoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:onClick="onTakePhotoClicked"
            android:text="@string/button_takePhoto"
            android:background="@drawable/flatbutton"
            android:textColor="#ffffff"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20dp"/>

    <net.analogyc.wordiary.views.AwesomeButtonView
            android:id="@+id/openGalleryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:onClick="onOpenGalleryClicked"
            android:text="@string/button_openGallery"
            android:background="@drawable/flatbutton"
            android:textColor="#ffffff"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20dp"/>

    <net.analogyc.wordiary.views.AwesomeButtonView
            android:id="@+id/openPreferencesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:onClick="onOpenPreferencesClicked"
            android:text="@string/button_openPreferences"
            android:background="@drawable/flatbutton"
            android:textColor="#ffffff"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20dp"/>

</LinearLayout>
