<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

    <net.analogyc.wordiary.views.ImageWebView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageWebView"
            android:layout_marginBottom="40dp"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#88000000"
            >

        <net.analogyc.wordiary.views.AwesomeButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_prevImage"
                android:id="@+id/prevImageButton"
                android:layout_weight="20"
                android:background="#00000000"
                android:textColor="#eeeeee"
                android:onClick="onPrevImageButtonClicked"
                android:textSize="24sp"
                android:paddingTop="2sp"
                android:paddingBottom="2sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text=""
                android:id="@+id/imageDateText"
                android:layout_weight="100"
                android:textColor="#cccccc"
                android:paddingTop="2sp"
                android:paddingBottom="2sp"/>

        <net.analogyc.wordiary.views.AwesomeButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_deleteImage"
                android:id="@+id/deleteImageButton"
                android:layout_weight="20"
                android:background="#00000000"
                android:textColor="#eeeeee"
                android:onClick="onDeleteImageButtonClicked"
                android:paddingTop="2sp"
                android:textSize="24sp"
                android:paddingBottom="2sp"/>

        <net.analogyc.wordiary.views.AwesomeButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_shareImage"
                android:id="@+id/shareImageButton"
                android:layout_weight="20"
                android:background="#00000000"
                android:textColor="#eeeeee"
                android:onClick="onShareImageButtonClicked"
                android:paddingTop="2sp"
                android:textSize="24sp"
                android:paddingBottom="2sp"/>

        <net.analogyc.wordiary.views.AwesomeButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_nextImage"
                android:id="@+id/nextImageButton"
                android:layout_weight="20"
                android:background="#00000000"
                android:textColor="#eeeeee"
                android:onClick="onNextImageButtonClicked"
                android:textSize="24sp"
                android:paddingTop="2sp"
                android:paddingBottom="2sp"/>
    </LinearLayout>


</RelativeLayout>