<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".EntryActivity"
                android:background="#eeeeee">

    <net.analogyc.wordiary.views.HeaderView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/HeaderViewLayout"/>

    <ScrollView
            android:id="@+id/EntryScrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/HeaderViewLayout">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:id="@+id/PrevNextEntryButtonsLayout"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#dddddd">

                <net.analogyc.wordiary.views.AwesomeButtonView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.20"
                        android:text="@string/button_prevEntry"
                        android:id="@+id/prevEntryButton"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="#dddddd"
                        android:onClick="prevEntryButtonClicked"/>

                <net.analogyc.wordiary.views.AwesomeButtonView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.20"
                        android:text="@string/button_nextEntry"
                        android:id="@+id/nextEntryButton"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="#dddddd"
                        android:onClick="nextEntryButtonClicked"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/messageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/PrevNextEntryButtonsLayout"
                    android:textColor="#222222"
                    android:textSize="25dp"/>

            <LinearLayout
                    android:id="@+id/DataAndMoodLayout"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@+id/messageText">

                <TextView
                        android:id="@+id/dateText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.50"
                        android:textSize="18dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textColor="#555555"/>

                <ImageView
                        android:id="@+id/moodImage"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.50"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/EntryButtonsLayout"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/DataAndMoodLayout"
                    android:layout_margin="10dp"
                    android:background="#dddddd">

                <net.analogyc.wordiary.views.AwesomeButtonView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.20"
                        android:text="@string/button_changeMood"
                        android:id="@+id/setNewMoodButton"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="#dddddd"
                        android:onClick="onMoodButtonClicked"/>

                <net.analogyc.wordiary.views.AwesomeButtonView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.20"
                        android:text="@string/button_editEntry"
                        android:id="@+id/editEntryButton"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="#dddddd"
                        android:onClick="onEditButtonClicked"/>

                <net.analogyc.wordiary.views.AwesomeButtonView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.20"
                        android:text="@string/button_deleteEntry"
                        android:id="@+id/deleteEntryButton"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="#dddddd"
                        android:onClick="onDeleteButtonClicked"/>

                <net.analogyc.wordiary.views.AwesomeButtonView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.20"
                        android:text="@string/button_shareEntry"
                        android:id="@+id/shareEntryButton"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="#dddddd"
                        android:onClick="onShareButtonClicked"/>
            </LinearLayout>


            <ImageView
                    android:id="@+id/photoButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onPhotoButtonClicked"
                    android:layout_below="@+id/EntryButtonsLayout"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingBottom="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>

            <net.analogyc.wordiary.views.AwesomeButtonView
                    android:id="@+id/photoDeleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/photoButton"
                    android:layout_alignTop="@+id/photoButton"
                    android:onClick="onPhotoDelete"
                    android:background="#bb999999"
                    android:textColor="#eeeeee"
                    android:padding="10dp"
                    android:text="@string/button_deleteImage"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>