<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mainLayout"
                tools:context=".MainActivity"
                android:background="#eeeeee">

    <net.analogyc.wordiary.views.HeaderView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/HeaderViewLayout"/>


    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="#dddddd"
            android:layout_below="@+id/HeaderViewLayout"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:padding="20sp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_photo_notice"
                android:id="@+id/noPhotosText"
                android:textColor="#333333"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"/>

        <LinearLayout
                android:id="@+id/noPhotosTextButtons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noPhotosText"
                android:layout_marginTop="10sp">

            <net.analogyc.wordiary.views.AwesomeButtonView
                    android:id="@+id/noPhotosTakePhotoButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:onClick="onTakePhotoClicked"
                    android:text="@string/button_takePhoto"
                    android:textColor="#333333"
                    android:background="#00ffffff"
                    android:paddingTop="10dp"
                    android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/noPhotosTextButtonsLabels"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noPhotosTextButtons">

            <net.analogyc.wordiary.views.AwesomeButtonView
                    android:id="@+id/noPhotosTakePhotoButtonLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:onClick="onTakePhotoClicked"
                    android:text="@string/button_takePhoto_label"
                    android:textColor="#333333"
                    android:background="#00ffffff"
                    android:paddingBottom="10dp"
                    android:textSize="14dp"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>